--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
       max-width: 100%;
       height: 200px;
     }
+    /**
+     * These are to avoid some trickier rendering problems
+     * on my site; galleries, embedded maps, etc
+     */
+    .post-body p img,
+    .tiled-gallery,
+    .wp_geo_map {
+      display: none;
+    }
     </style>
   </head>
 <body>
@@ -78,7 +87,11 @@
           </a>
           </div>
       <% } %>
-      <%= excerpt %>
+      <% if ( full ) { %>
+        <%= content %>
+      <% } else { %>
+        <%= excerpt %>
+      <% } %>
     </div>
   </script>
 
